--- a/tmux.conf
+++ b/tmux.conf
@@ -9,8 +9,8 @@ setw -g window-status-current-bg black
 setw -g window-status-current-attr bright
 set -g pane-border-fg red
 set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg green
+#set -g pane-active-border-fg white
+#set -g pane-active-border-bg green
 set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
