--- a/tmux.conf
+++ b/tmux.conf
@@ -41,7 +41,7 @@ bind k select-pane -U
 bind l select-pane -R
 
 # getting tmux to copy a buffer to system clipboard
- set-option -g default-command "reattach-to-user-namespace -l zsh" # or bash...
+# set-option -g default-command "reattach-to-user-namespace -l zsh" # or bash...
  bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy" \; display-message "Copied tmux buffer to system clipboard"
  bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
